--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,10 +16,14 @@ jobs:
     - name: Deploy to Server via SSH
       uses: appleboy/ssh-action@v1.0.3
       with:
+        debug: true
+
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
+          whoami
+          hostname -I
           cd /var/www/vhosts/himmelsteil.com/directus.himmelsteil.com
           git pull
           docker compose up -d
