--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,13 +19,9 @@ jobs:
         debug: true
 
         host: ${{ secrets.SERVER_HOST }}
-        username: "himmelsteil.com_ze6d8apbrjp"
+        username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          echo "🔑 SSH private key starts with:"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | head -c 50
-          whoami
-          hostname -I
           cd /var/www/vhosts/himmelsteil.com/directus.himmelsteil.com
           git pull
           docker compose up -d
