--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,5 +32,5 @@ jobs:
       run: |
         ssh -i ~/.ssh/github-deploy-directus -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
           cd /var/www/vhosts/himmelsteil.com/directus.himmelsteil.com/
-          docker-compose up -d
+          docker compose up -d --force-recreate
         EOF
